Finish Character CRUD
